--- a/VRChat/85/1188185.html
+++ b/VRChat/85/1188185.html
@@ -4,7 +4,7 @@
     <link href="/manifest.json" rel="manifest">
     <meta charset="utf-8">
     <title>
-      スキニング済み3D衣装「空々神社巫女服１（胸メッシュ付）」 - 空々神社社務所 - BOOTH
+      スキニング済み3D衣装「空々神社巫女服１（胸メッシュ付）」 - 空々仮想製作所 - BOOTH
     </title>
     <meta name="description" content=
     "※本品はたわわ胸Ver1.x用です。たわわ胸Ver.2とは互換性がありません。 Twitter @kuukuukon #空々神社社務所 で更新などを呟きます！ ご連絡もそちらへどうぞ。 ●更新 2019-02-05：Ver.1.10 ・振り袖の角度を９０度変更 ・Ver.1.00からの更新用として振り袖単品のFBXデータを追加 ●概要 サンプル動画１(キッシュちゃん＆キッシュ素体でたわわ巫女服） https://twitter.com/KuuKuuKon/status/1086973277036113923 サンプル動画２（猫の子へ使用した例、あと普通胸キッシュ）">
@@ -14,14 +14,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "スキニング済み3D衣装「空々神社巫女服１（胸メッシュ付）」 - 空々神社社務所 - BOOTH">
+    "スキニング済み3D衣装「空々神社巫女服１（胸メッシュ付）」 - 空々仮想製作所 - BOOTH">
     <meta name="twitter:description" content=
     "※本品はたわわ胸Ver1.x用です。たわわ胸Ver.2とは互換性がありません。 Twitter @kuukuukon #空々神社社務所 で更新などを呟きます！ ご連絡もそちらへどうぞ。 ●更新 2019-02-05：Ver.1.10 ・振り袖の角度を９０度変更 ・Ver.1.00からの更新用として振り袖単品のFBXデータを追加 ●概要 サンプル動画１(キッシュちゃん＆キッシュ素体でたわわ巫女服） https://twitter.com/KuuKuuKon/status/1086973277036113923 サンプル動画２（猫の子へ使用した例、あと普通胸キッシュ）">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1188185/ffe2c510-6450-469e-ba00-196dd8878fb4_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "スキニング済み3D衣装「空々神社巫女服１（胸メッシュ付）」 - 空々神社社務所 - BOOTH">
+    "スキニング済み3D衣装「空々神社巫女服１（胸メッシュ付）」 - 空々仮想製作所 - BOOTH">
     <meta property="og:description" content=
     "※本品はたわわ胸Ver1.x用です。たわわ胸Ver.2とは互換性がありません。 Twitter @kuukuukon #空々神社社務所 で更新などを呟きます！ ご連絡もそちらへどうぞ。 ●更新 2019-02-05：Ver.1.10 ・振り袖の角度を９０度変更 ・Ver.1.00からの更新用として振り袖単品のFBXデータを追加 ●概要 サンプル動画１(キッシュちゃん＆キッシュ素体でたわわ巫女服） https://twitter.com/KuuKuuKon/status/1086973277036113923 サンプル動画２（猫の子へ使用した例、あと普通胸キッシュ）">
     <meta property="og:image" content=
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "5kemeP3pKyl6F3WVEmN7uIHBVlkwvc5yDdqZ005F9go="></script>
+    "PVCkdWJmblznQB6D9NVSFJME+n+LCIJNJBxQvpOPuVs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スキニング済み3D衣装「空々神社巫女服１（胸メッシュ付）」","description":"※本品はたわわ胸Ver1.x用です。たわわ胸Ver.2とは互換性がありません。\n\n\nTwitter @kuukuukon #空々神社社務所 で更新などを呟きます！\nご連絡もそちらへどうぞ。\n\n●更新\n2019-02-05：Ver.1.10\n\t・振り袖の角度を９０度変更\n\t・Ver.1.00からの更新用として振り袖単品のFBXデータを追加\n\n\n\n●概要\nサンプル動画１(キッシュちゃん＆キッシュ素体でたわわ巫女服）\nhttps://twitter.com/KuuKuuKon/status/1086973277036113923\n\nサンプル動画２（猫の子へ使用した例、あと普通胸キッシュ）\nhttps://twitter.com/KuuKuuKon/status/1089131351301738496\n\n\nスキニング済みの３Dモデルデータ衣装の巫女服。VRChat想定構成\nむた様制作のキッシュ用素体を基準に製作しています。\n\nたわわ胸バージョン（胸メッシュ付き）\n標準胸バージョン（キッシュ用素体基準の胸）\nさらにシェイプキーで巫女服の襟の開き具合を調整可能！\n\n\nキッシュ用素体を使用しているアバターなら調整・改変不要で実装できます。\n（他素体への実装はそこそこのBlender力と要するので、キッシュちゃん以外のアバターでもキッシュ用素体を使用推奨）\n\n※キッシュ素体用の胸メッシュを使用する場合、Unity上でも実装はできますが、肌にUnlit以外のシェーダーを使用すると\n胸と素体のつなぎ目で影等の付き方が違ったりで目立ってしまいます。\nので、Blender上での頂点結合を推奨。簡単に出来るよう解説付き。\n\n\n＊VRMも可能ですが完全対応はまだできていません。\nVRMとして利用する際の注意点として、\n・Blender上で実装して１つのFBXとして完成させること\n・UnityPackageの設定済みPrefabはVRMには使用不可\n・手動でVRMスプリングボーンの設定すること\n・付属のMMS（まんまるしぇーだー）はVRMには利用不可。VRM専用ShaderのMToon等を利用すること。また、付属のMatcapは相性がわるいので、解説書にあるフリーMatcapなどを試してください。\n\n\n・VRChat想定構成\n・3Dデータ形式：FBX\n・ポリゴン合計：14666\n・ベーステクスチャー、ノーマルマップ、マットキャップ、PSD付属\n・ダイナミックボーン・MMS1_4b設定済みUnityPackage同梱。\n・実装解説付き(WEB)\n\n\n・改変自由\n・本データ、改変物の無許可の再配布、販売の禁止（要相談）\n・収益化・無償問わず動画・放送への出演可\n・本データ、改変物を再利用不可能な形で組み込んだアプリケーション、ゲームの配布・販売可\n\n詳しくは利用規約A型（グーグルドキュメント）\nhttps://docs.google.com/document/d/1fJEAowWZHvnp5NHfaBhf7gcKE0zFqvASNERnqnvWgsY/edit?usp=sharing\nを読んでください。\n購入した時点で同意したものとみなします。\n\n\n●主要な内容物\n・K2SMikofuku1.unitypackage\tこれ１つに必要なデータが詰まってるユニティーパッケージ。(下記と重複)\n・Mikofuku1_Fullset.fbx\t巫女服、オーバーニ、ぽっくりのFBXデータ。\n・Mikofuku1Parts_Furisode.fbx　振り袖単品データ。Ver1_00からVer1_10への更新用。\n・各種メインテクスチャー画像\n・各種ノーマルマップ画像\n・マットキャップ2種\n・ClothEditor_Mikofuku1.xml\tClothEditor(着せ替え支援ツール)用XMLデータ\n・おまけの白紐下着透過画像\tキッシュ用素体専用。n_body.pngに合成して使う前提の下着画像。おまけ。\n・改変用PSDファイルなどが入ったフォルダ\n\n●実装方法(下記のドキュメントにアクセスしてください）\nhttps://docs.google.com/document/d/1oHsET3JwYZV1m8Wyp3kzElOU4FgJlLnfKjVNL_atxns/edit?usp=sharing\n","url":"https://booth.pm/ja/items/1188185","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1800"},"image":"https://booth.pximg.net/c/620x620/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1188185/ffe2c510-6450-469e-ba00-196dd8878fb4_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5kemeP3pKyl6F3WVEmN7uIHBVlkwvc5yDdqZ005F9go="></script>
+    nonce="PVCkdWJmblznQB6D9NVSFJME+n+LCIJNJBxQvpOPuVs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -155,9 +155,9 @@
                             data-tracking="click" target="_blank"
                             rel="noopener" href=
                             "https://kuukuukon.booth.pm/"><img alt=
-                            "空々神社社務所" class=
+                            "空々仮想製作所" class=
                             "h-[24px] rounded-oval w-[24px]" src=
-                            "https://booth.pximg.net/c/48x48/users/5525003/icon_image/31c309e8-cf8f-4cfc-9495-5cbbe2f34f2c_base_resized.jpg">空々神社社務所</a>
+                            "https://booth.pximg.net/c/48x48/users/5525003/icon_image/acfaaa10-b281-4b3f-b44d-25a0f1c5a1e8_base_resized.jpg">空々仮想製作所</a>
                             <h2 class=
                             "font-bold leading-[32px] m-0 text-[24px]">
                               スキニング済み3D衣装「空々神社巫女服１（胸メッシュ付）」
