--- a/VRChat/66/1100666.html
+++ b/VRChat/66/1100666.html
@@ -4,7 +4,7 @@
     <link href="/manifest.json" rel="manifest">
     <meta charset="utf-8">
     <title>
-      スキニング済み3D衣装「例のタートルネックセーター(胸メッシュ付)」 - 空々神社社務所 - BOOTH
+      スキニング済み3D衣装「例のタートルネックセーター(胸メッシュ付)」 - 空々仮想製作所 - BOOTH
     </title>
     <meta name="description" content=
     "※本品はたわわ胸Ver1.x用です。たわわ胸Ver.2とは互換性がありません。 更新 Ver.1.10： 　・標準のキッシュ素体の胸サイズに合わせたFBXデータおよびにプレハブを追加。WEB解説の追記 Ver.1.20： 　・ワンピースタイプのタートルネックセーターのfbxとprefabを追加、今の所たわわのみ。 　・あと着せ替え支援ツール（ClothEditor）用のxmlデータを追加。 　・たわわな方のfbxの形状微調整。 Ver.1.21 　・ワンピに標準胸タイプ追加 　・ワンピの後ろがお尻にめり込みやすかったのでダイナミックボーンを修正 ●概要">
@@ -14,14 +14,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "スキニング済み3D衣装「例のタートルネックセーター(胸メッシュ付)」 - 空々神社社務所 - BOOTH">
+    "スキニング済み3D衣装「例のタートルネックセーター(胸メッシュ付)」 - 空々仮想製作所 - BOOTH">
     <meta name="twitter:description" content=
     "※本品はたわわ胸Ver1.x用です。たわわ胸Ver.2とは互換性がありません。 更新 Ver.1.10： 　・標準のキッシュ素体の胸サイズに合わせたFBXデータおよびにプレハブを追加。WEB解説の追記 Ver.1.20： 　・ワンピースタイプのタートルネックセーターのfbxとprefabを追加、今の所たわわのみ。 　・あと着せ替え支援ツール（ClothEditor）用のxmlデータを追加。 　・たわわな方のfbxの形状微調整。 Ver.1.21 　・ワンピに標準胸タイプ追加 　・ワンピの後ろがお尻にめり込みやすかったのでダイナミックボーンを修正 ●概要">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1100666/194cc02c-5f3b-4d61-ad5a-12eca5fe141b_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "スキニング済み3D衣装「例のタートルネックセーター(胸メッシュ付)」 - 空々神社社務所 - BOOTH">
+    "スキニング済み3D衣装「例のタートルネックセーター(胸メッシュ付)」 - 空々仮想製作所 - BOOTH">
     <meta property="og:description" content=
     "※本品はたわわ胸Ver1.x用です。たわわ胸Ver.2とは互換性がありません。 更新 Ver.1.10： 　・標準のキッシュ素体の胸サイズに合わせたFBXデータおよびにプレハブを追加。WEB解説の追記 Ver.1.20： 　・ワンピースタイプのタートルネックセーターのfbxとprefabを追加、今の所たわわのみ。 　・あと着せ替え支援ツール（ClothEditor）用のxmlデータを追加。 　・たわわな方のfbxの形状微調整。 Ver.1.21 　・ワンピに標準胸タイプ追加 　・ワンピの後ろがお尻にめり込みやすかったのでダイナミックボーンを修正 ●概要">
     <meta property="og:image" content=
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "4JmfWjvdd4dNIIkamebge6bp1lGckxIjLahPUp+7qLM="></script>
+    "VX3uyLeMZXUnEZ+u8g0dlJ6+RdwfcYcfxH5LJXqGQCQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スキニング済み3D衣装「例のタートルネックセーター(胸メッシュ付)」","description":"※本品はたわわ胸Ver1.x用です。たわわ胸Ver.2とは互換性がありません。\n\n更新\nVer.1.10：\n　・標準のキッシュ素体の胸サイズに合わせたFBXデータおよびにプレハブを追加。WEB解説の追記\n\nVer.1.20：\n　・ワンピースタイプのタートルネックセーターのfbxとprefabを追加、今の所たわわのみ。\n　・あと着せ替え支援ツール（ClothEditor）用のxmlデータを追加。\n　・たわわな方のfbxの形状微調整。\n\nVer.1.21\n　・ワンピに標準胸タイプ追加\n　・ワンピの後ろがお尻にめり込みやすかったのでダイナミックボーンを修正\n\n\n●概要\nスキニング済みの３Dモデルデータの衣装です。\n\nサンプル動画\n(たわわ)\nhttps://twitter.com/KuuKuuKon/status/1064152621336784897\n(標準)\nhttps://twitter.com/KuuKuuKon/status/1068858001912545280\n(ワンピ)\nhttps://twitter.com/KuuKuuKon/status/1076454888119316480\n\nたわわな胸メッシュ付きなので、胸のないアバターの子でも着せることが出来ます。\n標準的な胸バージョンも追加！\n\nむた様制作のキッシュちゃんを基準に制作しているのでキッシュちゃんへは調整不要で利用可。\n他アバターへも調整・改変すれば使用可能です。\n他アバターへも『キッシュ』用素体へ付け替えると調整不要で着せることが出来ます。\nまた、胸・スカートのダイナミックボーン設定済みのUnityPackageを同梱しています。\n\n・3Dデータ形式：FBX\n・ポリゴン合計：4434\n・ベーステクスチャー、ノーマルマップ、PSD付属\n・ダイナミックボーン設定済みUnityPackage同梱。\n・実装解説付き(WEB)\n\n・改変自由\n・本データ、改変物の無許可の再配布、販売の禁止（要相談）\n・収益化・無償問わず動画・放送への出演可\n・本データ、改変物を再利用不可能な形で組み込んだアプリケーション、ゲームの配布・販売可\n\n詳しくは下記の利用規約を読んでください。購入した時点で同意したものとみなします。\n\n●実装方法(下記のドキュメントにアクセスしてください）\nhttps://docs.google.com/document/d/1V6ov8JXHneF2amua_TZidM_V-eQ5G9IJYNcGajfUdhA/edit?usp=sharing\n","url":"https://booth.pm/ja/items/1100666","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1200"},"image":"https://booth.pximg.net/c/620x620/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1100666/194cc02c-5f3b-4d61-ad5a-12eca5fe141b_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4JmfWjvdd4dNIIkamebge6bp1lGckxIjLahPUp+7qLM="></script>
+    nonce="VX3uyLeMZXUnEZ+u8g0dlJ6+RdwfcYcfxH5LJXqGQCQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -155,9 +155,9 @@
                             data-tracking="click" target="_blank"
                             rel="noopener" href=
                             "https://kuukuukon.booth.pm/"><img alt=
-                            "空々神社社務所" class=
+                            "空々仮想製作所" class=
                             "h-[24px] rounded-oval w-[24px]" src=
-                            "https://booth.pximg.net/c/48x48/users/5525003/icon_image/31c309e8-cf8f-4cfc-9495-5cbbe2f34f2c_base_resized.jpg">空々神社社務所</a>
+                            "https://booth.pximg.net/c/48x48/users/5525003/icon_image/acfaaa10-b281-4b3f-b44d-25a0f1c5a1e8_base_resized.jpg">空々仮想製作所</a>
                             <h2 class=
                             "font-bold leading-[32px] m-0 text-[24px]">
                               スキニング済み3D衣装「例のタートルネックセーター(胸メッシュ付)」
