--- a/VRChat/77/1092677.html
+++ b/VRChat/77/1092677.html
@@ -72,49 +72,27 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-  </head>
-  <body>
-    <div class="mini-player-controller" style="display: none;">
-      <a class="scroller" data-smooth-scroll="true"><img class=
-      "mini-player-controller__image" src=
-      "https://asset.booth.pm/assets/thumbnail_placeholder_c_300-09027647543d43ee525b2a7fe28d5ed5a3b6069d0c596c89b21776543ed1c0fe.png"></a><a class="scroller mini-player-information"
-      data-smooth-scroll="true">
-      <div class="mini-player-information__item-name"></div>
-      <div class="mini-player-information__shop-name"></div>
-      <div class="mini-player-information__navigation">
-        試聴中の商品へスクロール
-      </div></a>
-      <div class="mini-player-controls">
-        <div class="mini-player-mode-ui">
-          <div class="mini-player-mode-ui__knob"></div>
-          <div class="mini-player-mode-ui__short">
-            15秒
-          </div>
-          <div class="mini-player-mode-ui__full">
-            フル
-          </div>
-        </div>
-        <div class="mini-player-play-ui"></div>
-      </div>
-    </div>
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "3uhSUbbAF73crXQvAF9sAPpr0PLBqpQ4oAriVZVCeLY="></script>
+    "V/MA0eRKcdK4h0/ggXzQuLieQf1NwR7zXS2YdChXugQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"３Dモデル「ヴァンパイアウィング」","description":"VRChatアバターモデル向きに作られた悪魔の羽の３Dモデルです。VRChat以外にもゲームの製作やVTuberの動画配信の演出などご自由にご利用ください。\nzipで解凍されたフォルダには「.unitypackage」形式のファイルと「readme」が同梱されています。\n\nこのモデルにはまんまるシェーダー1_3が使用されています。\nバージョンが1_3より古い場合にも同様、導入してださい。\n\nテクスチャを改変しなくてもマテリアルカラーを変えるだけでカンタンに色を変えられることができ、アニメチックなモデルになじむ作りになっているのが特徴です。\n（使用例画像に使われている３Dモデル「キッシュ」は同梱されていません）\n\n▽面数は両翼で492です、VRChatのポリゴン数制限にご注意ください。\n\n============================================================\n・更新\n2018/12/02\n　VampireWing.prefabにアニメーターコントローラが入っていなかったのを修正。\n　MnMrShader1_3.zipをフォルダ内から削除し、代わりにパッケージにシェーダーを同梱させました。","url":"https://booth.pm/ja/items/1092677","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/eac26deb-f8eb-4293-8010-904b0d088bf4/i/1092677/26883018-f45d-4c0f-845a-03be34357d08_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
-    "apple-touch-icon-precomposed"><noscript><iframe height="0"
-    src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
+    "apple-touch-icon-precomposed">
+  </head>
+  <body>
+    <noscript><iframe height="0" src=
+    "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3uhSUbbAF73crXQvAF9sAPpr0PLBqpQ4oAriVZVCeLY="></script>
+    nonce="V/MA0eRKcdK4h0/ggXzQuLieQf1NwR7zXS2YdChXugQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
